# doc2md

./: .gitignore  CLAUDE.md  PRD.md  config.toml  morocco_processing_notes.md  pyproject.toml
_desktop_build/: setup.py
assets/: doc2md-reader.icns
docs/: PIPELINE_COMPONENTS.md  PROCESSING_LOG.md  READER.md
reader/: build_library.py  index.html  reader.css  reader.js
screenshots/: test_bleed.py
scripts/: assemble_boston_claude_api.py  demo_claude_api.py  fix_pua.py  make_icons.py  rerun_summary_pages.py  run_boston_claude_api.py  run_claude_api_ocr.py
src/doc2md/: cache.py  cli.py  config.py  desktop.py  models.py  pipeline.py
src/doc2md/analysis/: chapter_detector.py  classifier.py  llm_client.py  prompts.py  segmenter.py
src/doc2md/assembly/: citations.py  cleaner.py  footnotes.py  merger.py  (+2 more)
tests/: conftest.py  test_bern2.py  test_build_library.py  test_cache.py  test_chapter_detector.py  test_chapter_splitter.py  test_chrome_cropper.py  test_citations.py  test_classifier.py  test_cleaner.py  test_cli.py  test_column_extractor.py  test_config.py  test_dedup.py  test_detect.py  test_figure_extractor.py  test_file_scanner.py  test_footnotes.py  test_index_builder.py  test_index_linker.py  test_integration_academic_pdf.py  test_llm_client.py  test_markdown_writer.py  test_merger.py  test_method_ner.py  test_models.py  test_ner_normalizer.py  test_ocr_engines.py  test_ocr_extract.py  test_paper_metadata.py  test_paper_models.py  test_paper_pipeline.py  test_pdf_extract.py  test_pipeline.py  test_prompts.py  test_pubtator.py  test_rclone_sync.py  test_reader_pagination.py  test_reader_playback.py  test_reorder.py  (+4 more)
(+30 files in other folders)
