[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc2md"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "PyMuPDF>=1.24",
    "surya-ocr>=0.6",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "responses>=0.25",
]

[project.scripts]
doc2md = "doc2md.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=doc2md --cov-report=term-missing"
