[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc2md"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "PyMuPDF>=1.24",
    "surya-ocr>=0.17",
    "transformers>=4.50,<5",
    "requests>=2.31",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "responses>=0.25",
]
# Optional OCR engines for the cascade pipeline. Install one or both to
# enable the Tesseract → Apple Vision → Surya cascade. Surya is always
# available because it's in the core `dependencies` above.
cascade = [
    "pytesseract>=0.3.10",
    "ocrmac>=1.0; sys_platform == 'darwin'",
]

[project.scripts]
doc2md = "doc2md.cli:main"
doc2md-reader = "doc2md.desktop:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=doc2md --cov-report=term-missing"
